--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,6 @@ body {
 
 .nav {
   top: 0;
-  height: 50px;
   width: 100%;
   background-color: #4d4d4d;
   position: relative;
@@ -96,6 +95,7 @@ body {
 }
 
 .nav > #nav-check {
+  height: 0px;
   display: none;
 }
 
@@ -127,12 +127,11 @@ body {
   }
 
   .nav > .nav-links {
-    position: absolute;
     display: block;
     width: 100%;
     background-color: #333;
     height: 0px;
-    transition: all 0.3s ease-in;
+    transition: all 1s ease-in;
     overflow-y: hidden;
     top: 50px;
     left: 0px;
@@ -148,9 +147,10 @@ body {
   }
 
   .nav > #nav-check:checked ~ .nav-links {
-    height: calc(100vh - 50px);
+    height: auto;
     overflow-y: auto;
   }
+
 }
 /* end navbar*/
 
