--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
   margin: 1.5em auto 0 auto;
   text-align: justify;
   hyphens: auto;
-  font-family: 'segoe ui';
+  font-family: 'Helvetica';
 }
 
 
@@ -45,7 +45,7 @@ body {
   width: 100%;
   background-color: #4d4d4d;
   position: relative;
-  font-family: 'segoe ui';
+  font-family: 'Helvetica';
   position: fixed;
   padding: 16;
   z-index: 1;
@@ -57,7 +57,7 @@ body {
   width: 100%;
   background-color: #4d4d4d;
   position: relative;
-  font-family: 'segoe ui';
+  font-family: 'Helvetica';
   position: fixed;
   padding: 2;
 }
@@ -413,7 +413,7 @@ body {
 @media print {
   body {
     font-size: 10pt;
-    font-family: Palatino, Times, Georgia, serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: #000000;
     background-color: #FFFFFF;
   }
