--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ dfn {
 	text-align: right;
 	}
 
-	.description p {
+	.quote-sec p {
 		color: #fff;
 		font-size: 1.3rem;
 		line-height: 1.5;
@@ -186,23 +186,27 @@ dfn {
 
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 900px) {
 
-	.description {
-		left: 0;
-		padding: 0 15px;
+	.quote-sec {
+		left: 50%;
 		position: absolute;
-		top: 10%;
-		transform: none;
+		top: 45%;
+		transform: translate(-50%, -10%);
 		text-align: center;
+		color: 'black';
 	}
 
-	.description h1 {
-		font-size: 2em;
+	.quote-sec h2 {
+		
+		color: 'black';
+		text-align: center;
+		font-size: 1.5em;
 	}
-
-	.description p {
-		font-size: 1.2rem;
+	.quote-sec h3 {
+		color: 'black';
+		text-align: right;
+		font-size: 1.2em;
 	}
 
 	.features {
@@ -217,3 +221,5 @@ dfn {
 		min-width: auto;
 	}
 }
+
+
