--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,20 @@ dfn {
 		color: #000;
 	}
 
+	.videowrapper {
+		position: relative;
+		padding-bottom: 56.25%; /* 16:9 */
+		height: 0;
+	  }
+
+	.videowrapper iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	  }
+
 	/* begin about me */
 	.section-title {
 		color: #333;
