--- a/illya/illya-nayshevsky.css
+++ b/illya/illya-nayshevsky.css
@@ -356,23 +356,24 @@
 }
 
 .u-section-4 .u-list-1 {
-  width: 1641px;
-  margin: 20px -501px 53px auto;
+  margin-top: 77px;
+  margin-bottom: 60px;
+  min-height: 451px;
 }
 
 .u-section-4 .u-repeater-1 {
-  min-height: 522px;
+  min-height: 451px;
   grid-auto-columns: calc(33.3333% - 6.66667px);
   grid-template-columns: calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px);
   grid-gap: 10px 10px;
 }
 
 .u-section-4 .u-container-layout-1 {
-  padding: 30px;
+  padding: 28px 30px;
 }
 
 .u-section-4 .u-image-1 {
-  height: 268px;
+  height: 170px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -387,11 +388,11 @@
 }
 
 .u-section-4 .u-container-layout-2 {
-  padding: 30px;
+  padding: 28px 30px;
 }
 
 .u-section-4 .u-image-2 {
-  height: 268px;
+  height: 170px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -406,11 +407,11 @@
 }
 
 .u-section-4 .u-container-layout-3 {
-  padding: 30px;
+  padding: 28px 30px;
 }
 
 .u-section-4 .u-image-3 {
-  height: 268px;
+  height: 170px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -425,11 +426,11 @@
 }
 
 .u-section-4 .u-container-layout-4 {
-  padding: 30px;
+  padding: 28px 30px;
 }
 
 .u-section-4 .u-image-4 {
-  height: 268px;
+  height: 170px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -452,19 +453,16 @@
 
 .u-section-4 .u-gallery-nav-2 {
   position: absolute;
-  right: 10px;
   width: 40px;
   height: 40px;
+  left: auto;
+  top: 206px;
+  right: 10px;
 }
 
 @media (max-width: 1199px) {
   .u-section-4 .u-sheet-1 {
     min-height: 592px;
-  }
-
-  .u-section-4 .u-list-1 {
-    width: 940px;
-    margin-right: 0;
   }
 
   .u-section-4 .u-repeater-1 {
@@ -473,36 +471,80 @@
     grid-template-columns: repeat(3, calc(33.333333333333336% - 6.66667px));
   }
 
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+
   .u-section-4 .u-image-1 {
-    height: 139px;
+    height: 161px;
   }
 
   .u-section-4 .u-text-2 {
-    margin-right: 0;
+    margin-left: 18px;
+    margin-right: 18px;
+  }
+
+  .u-section-4 .u-text-3 {
+    margin-left: 18px;
+    margin-right: 18px;
+  }
+
+  .u-section-4 .u-container-layout-2 {
+    padding-left: 12px;
+    padding-right: 12px;
   }
 
   .u-section-4 .u-image-2 {
-    height: 139px;
+    height: 161px;
   }
 
   .u-section-4 .u-text-4 {
-    margin-right: 0;
+    margin-left: 18px;
+    margin-right: 18px;
+  }
+
+  .u-section-4 .u-text-5 {
+    margin-left: 18px;
+    margin-right: 18px;
+  }
+
+  .u-section-4 .u-container-layout-3 {
+    padding-left: 12px;
+    padding-right: 12px;
   }
 
   .u-section-4 .u-image-3 {
-    height: 139px;
+    height: 161px;
   }
 
   .u-section-4 .u-text-6 {
-    margin-right: 0;
+    margin-left: 18px;
+    margin-right: 18px;
+  }
+
+  .u-section-4 .u-text-7 {
+    margin-left: 18px;
+    margin-right: 18px;
+  }
+
+  .u-section-4 .u-container-layout-4 {
+    padding-left: 12px;
+    padding-right: 12px;
   }
 
   .u-section-4 .u-image-4 {
-    height: 139px;
+    height: 161px;
   }
 
   .u-section-4 .u-text-8 {
-    margin-right: 0;
+    margin-left: 18px;
+    margin-right: 18px;
+  }
+
+  .u-section-4 .u-text-9 {
+    margin-left: 18px;
+    margin-right: 18px;
   }
 }
 
@@ -511,30 +553,86 @@
     min-height: 614px;
   }
 
-  .u-section-4 .u-list-1 {
-    width: 720px;
-  }
-
   .u-section-4 .u-repeater-1 {
     min-height: 355px;
     grid-auto-columns: calc(50% - 5.0000025px);
     grid-template-columns: repeat(2, calc(50% - 5.0000025px));
   }
 
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
   .u-section-4 .u-image-1 {
-    height: 165px;
+    height: 189px;
+  }
+
+  .u-section-4 .u-text-2 {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .u-section-4 .u-text-3 {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .u-section-4 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .u-section-4 .u-image-2 {
-    height: 165px;
+    height: 189px;
+  }
+
+  .u-section-4 .u-text-4 {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .u-section-4 .u-text-5 {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .u-section-4 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .u-section-4 .u-image-3 {
-    height: 165px;
+    height: 189px;
+  }
+
+  .u-section-4 .u-text-6 {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .u-section-4 .u-text-7 {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .u-section-4 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .u-section-4 .u-image-4 {
-    height: 165px;
+    height: 189px;
+  }
+
+  .u-section-4 .u-text-8 {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .u-section-4 .u-text-9 {
+    margin-left: 20px;
+    margin-right: 20px;
   }
 }
 
@@ -543,45 +641,85 @@
     min-height: 630px;
   }
 
-  .u-section-4 .u-list-1 {
-    width: 540px;
-  }
-
   .u-section-4 .u-repeater-1 {
     grid-auto-columns: calc(100% - 0px);
     grid-template-columns: 100%;
   }
 
   .u-section-4 .u-container-layout-1 {
-    padding-right: 40px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .u-section-4 .u-image-1 {
-    height: 286px;
+    height: 276px;
+  }
+
+  .u-section-4 .u-text-2 {
+    margin-right: 40px;
+    margin-left: 30px;
+  }
+
+  .u-section-4 .u-text-3 {
+    margin-right: 40px;
+    margin-left: 30px;
   }
 
   .u-section-4 .u-container-layout-2 {
-    padding-right: 40px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .u-section-4 .u-image-2 {
-    height: 286px;
+    height: 276px;
+  }
+
+  .u-section-4 .u-text-4 {
+    margin-right: 40px;
+    margin-left: 30px;
+  }
+
+  .u-section-4 .u-text-5 {
+    margin-right: 40px;
+    margin-left: 30px;
   }
 
   .u-section-4 .u-container-layout-3 {
-    padding-right: 40px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .u-section-4 .u-image-3 {
-    height: 286px;
+    height: 276px;
+  }
+
+  .u-section-4 .u-text-6 {
+    margin-right: 40px;
+    margin-left: 30px;
+  }
+
+  .u-section-4 .u-text-7 {
+    margin-right: 40px;
+    margin-left: 30px;
   }
 
   .u-section-4 .u-container-layout-4 {
-    padding-right: 40px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .u-section-4 .u-image-4 {
-    height: 286px;
+    height: 276px;
+  }
+
+  .u-section-4 .u-text-8 {
+    margin-right: 40px;
+    margin-left: 30px;
+  }
+
+  .u-section-4 .u-text-9 {
+    margin-right: 40px;
+    margin-left: 30px;
   }
 }
 
@@ -590,44 +728,56 @@
     min-height: 590px;
   }
 
-  .u-section-4 .u-list-1 {
-    width: 340px;
-  }
-
   .u-section-4 .u-repeater-1 {
     grid-auto-columns: 100%;
   }
 
-  .u-section-4 .u-container-layout-1 {
-    padding-right: 30px;
-  }
-
   .u-section-4 .u-image-1 {
-    height: 176px;
+    height: 170px;
   }
 
-  .u-section-4 .u-container-layout-2 {
-    padding-right: 30px;
+  .u-section-4 .u-text-2 {
+    margin-right: 30px;
+  }
+
+  .u-section-4 .u-text-3 {
+    margin-right: 30px;
   }
 
   .u-section-4 .u-image-2 {
-    height: 176px;
+    height: 170px;
   }
 
-  .u-section-4 .u-container-layout-3 {
-    padding-right: 30px;
+  .u-section-4 .u-text-4 {
+    margin-right: 30px;
+  }
+
+  .u-section-4 .u-text-5 {
+    margin-right: 30px;
   }
 
   .u-section-4 .u-image-3 {
-    height: 176px;
+    height: 170px;
   }
 
-  .u-section-4 .u-container-layout-4 {
-    padding-right: 30px;
+  .u-section-4 .u-text-6 {
+    margin-right: 30px;
+  }
+
+  .u-section-4 .u-text-7 {
+    margin-right: 30px;
   }
 
   .u-section-4 .u-image-4 {
-    height: 176px;
+    height: 170px;
+  }
+
+  .u-section-4 .u-text-8 {
+    margin-right: 30px;
+  }
+
+  .u-section-4 .u-text-9 {
+    margin-right: 30px;
   }
 }.u-section-5 .u-sheet-1 {
   min-height: 541px;
